--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -25,5 +26,6 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "validator": "^13.15.0"
-  }
+  },
+  "type": "module"
 }
